--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -6,9 +6,40 @@
     cursor: pointer !important;
 }
 
-.dialog {
-    box-shadow: 0 8px 6px -6px black;
-    position: static;
+.fw {
+    color: black;
+}
+
+.search {
+    background-color: $base-color !important;
+}
+
+.navbar {
+    border: 1px solid #f7b244 !important;
+}
+
+.searchbtn {
+    // background-image: linear-gradient(to right, black, #f7b244);
+    color: black !important;
+}
+
+.searchbtn:hover {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    background-color: #242424 !important;
+    color: #f7b244 !important;
+}
+
+.active {
+    background: RGBA(0,0,0,.5) no-repeat center;
+    width: 60% !important;
+    height: 70% !important;
+    background-size: cover;
+    position: fixed;
+    z-index: 10000;
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    top: 15%;
     left: 20%;
-    top: 10%;
+    transition: transform 1s;
+    transform: scale(1.3);
 }
